@@ -9,9 +9,9 @@
 #define FONTS_ERROR 1  /* 1=Don't 0=Print errors about missing fonts */
 
 static const char *defaultdesktopnames[] = { "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", };
-static const char *defaultbarcolor[] = { "#ff0000", "#00ff00", "#0000ff", "#000000", };
-static const char *defaulttextcolor[] = { "#000000", "#ffffff", "#ffffff", "#ffff00", "#ff00ff", "#f0f0f0", "#0f0f0f", "#000000", "#000000", "#000000", };
-static const char *defaultwincolor[] = { "#ff0000", "#00ff00", };
+static const char *defaultbarcolor[] = { "#665522", "#002030", "#003040", "#001020", };
+static const char *defaulttextcolor[] = { "#002030", "#002030", "#665544", "#998866", "#887733", "#999999", "#558844", "#aa6622", "#ffffff", "#003040", };
+static const char *defaultwincolor[] = { "#443311", "#002030", };
 static const char *defaultmodename[] = { "[0]", "[1]", "[2]", "[3]", "[4]", };
 static const char defaultfontlist[] = "-*-terminus-medium-r-*-*-12-*-*-*-*-*-*-*";
 
