@@ -1,9 +1,9 @@
 # Possible Mods are Alt, CtrlAlt, ShftAlt, Super, ShftSuper, CtrlSuper, ALTSuper
-
+#
 # Set external commands ; use with spawn
 CMD dmenucmd;dmenu_run;-i;-nb;#666622;-nf;white;NULL;
 CMD xtermcmd;xterm;NULL;
-
+#
 KEY Alt;1;change_desktop;0;
 KEY Alt;2;change_desktop;1;
 KEY Alt;3;change_desktop;2;
@@ -14,10 +14,10 @@ KEY Alt;7;change_desktop;6;
 KEY Alt;8;change_desktop;7;
 KEY Alt;9;change_desktop;8;
 KEY Alt;F10;change_desktop;9;
-
+#
 KEY Super;Right;rotate_desktop;1;
 KEY Super;Left;rotate_desktop;-1;
-
+#
 # Send an app to another desktop and follow it
 KEY ShftAlt;1;follow_client_to_desktop;0;
 KEY ShftAlt;2;follow_client_to_desktop;1;
@@ -29,7 +29,7 @@ KEY ShftAlt;7;follow_client_to_desktop;6;
 KEY ShftAlt;8;follow_client_to_desktop;7;
 KEY ShftAlt;9;follow_client_to_desktop;8;
 KEY ShftAlt;0;follow_client_to_desktop;9;
-
+#
 # Send an app to another desktop but dont't follow it
 KEY ShftSuper;1;client_to_desktop;0;
 KEY ShftSuper;2;client_to_desktop;1;
@@ -41,7 +41,7 @@ KEY ShftSuper;7;client_to_desktop;6;
 KEY ShftSuper;8;client_to_desktop;7;
 KEY ShftSuper;9;client_to_desktop;8;
 KEY ShftSuper;0;client_to_desktop;9;
-
+#
 KEY Alt;a;rotate_mode;1;
 KEY Alt;c;kill_client;
 KEY Alt;j;next_win;
@@ -52,14 +52,14 @@ KEY Alt;p;resize_stack;10;
 KEY Alt;o;resize_stack;-10;
 KEY Alt;u;update_config;
 KEY Alt;Tab;last_desktop;
-
+#
 # Shortcut for dmenu_run
 KEY Alt;v;spawn;dmenucmd;
-
+#
 # Add/remove a window to/from the master area in vertical/horizontal mode
 KEY ShftAlt;m;more_master;1;
 KEY ShftAlt;l;more_master;-1;
-
+#
 # move windows
 KEY ShftAlt;k;move_down;10;
 KEY ShftAlt;j;move_up;-10;
@@ -76,12 +76,13 @@ KEY ShftAlt;h;switch_mode;2;
 KEY ShftAlt;g;switch_mode;3;
 # Switch tiling mode to center stacking
 KEY ShftAlt;c;switch_mode;4;
-
+#
 # Show/hide the bar
 KEY Super;b;toggle_bar;
-
+#
 # Shortcut for xterm
 KEY Super;t;spawn;xtermcmd;
-
+#
 # Shortcut to exit the window manager
 KEY CtrlAlt;q;quit;
+#
