@@ -1,7 +1,7 @@
 # lines starting with a hash are ignored
 # Number of DESKTOPS should be first
 DESKTOPS 6
-
+#
 # switchertheme colours are :
 #    focused desktop in switcher
 #    unfocused desktop in switcher
@@ -19,7 +19,7 @@ STATUSTHEME #002030;#000000;#ffffff;#999999;#777755;#339933;#aa6644;#ffffff;#ddd
 # windowtheme colours are :
 #    focused window border and unfocused window border
 WINDOWTHEME #443311;#002030;
-
+#
 BORDERWIDTH 2
 # percentage of the desktop for the main window
 MASTERSIZE 52
@@ -30,6 +30,8 @@ TOPSTACK 1
 # default tiling modes for each desktop(defaults to 0):
 #     0=vert,1=fullscreen,2=horiz,3=grid,4=stacking
 DEFAULTMODE 3;4;0;1;2;3;
+# Select monitor the bar will be on, not needed with on monitor
+# BAR_MONITOR 1
 # For semi transparent unfocused windows if using a compositor e.g. compton
 UF_WIN_ALPHA 65
 # only one of FOLLOWMOUSE and CLICKTOFOCUS should be zero, but none have to be
@@ -47,3 +49,4 @@ SHOWNUMOPEN 1
 MODENAME [V];[F];[H];[G];[C];
 DESKTOP_NAMES one;two;three;four;five;six;
 FONTNAME "-*-clean-*-*-*-*-14-*-*-*-*-*-*-*"
+# 
