@@ -195,7 +195,7 @@ static unsigned int attachaside, bdw, bool_quit, clicktofocus, current_desktop, 
 static unsigned int screen, followmouse, mode, msize, previous_desktop, DESKTOPS, STATUS_BAR;
 static int num_screens, growth, sh, sw, master_size, nmaster;
 static unsigned int sb_desks;        // width of the desktop switcher
-static unsigned int sb_height, sb_width, screen, show_bar, has_bar, wnamebg;
+static unsigned int sb_height, sb_width, screen, show_bar, has_bar, wnamebg, barmon;
 static unsigned int showopen;        // whether the desktop switcher shows number of open windows
 static unsigned int topbar, top_stack, windownamelength, keycount, cmdcount, dtcount, pcount, LA_WINDOWNAME;
 static int ufalpha;
@@ -1289,18 +1289,18 @@ void init_desks() {
 
     for (i = 0; i < num_screens; i++) {
         for(j=i;j<DESKTOPS;j+=num_screens) {
-            if(desktops[j].w > 0) continue;
-            //printf("**screen is %d - desktop is %d **\n", i, j);
-            desktops[j].x = info[i].x_org + last_width;
-            desktops[j].y = info[i].y_org;
-            desktops[j].w = info[i].width - bdw;
-            if(i == 0 && STATUS_BAR == 0 && show_bar == 0) {
+            if(i == barmon && STATUS_BAR == 0 && show_bar == 0) {
                 desktops[j].h = info[i].height - (sb_height+4+bdw);
                 desktops[j].showbar = show_bar;
             } else {
                 desktops[j].h = info[i].height - bdw;
                 desktops[j].showbar = 1;
             }
+            if(desktops[j].w > 0) continue;
+            //printf("**screen is %d - desktop is %d **\n", i, j);
+            desktops[j].x = info[i].x_org + last_width;
+            desktops[j].y = info[i].y_org;
+            desktops[j].w = info[i].width - bdw;
             //printf(" x=%d - y=%d - w=%d - h=%d \n", desktops[j].x, desktops[j].y, desktops[j].w, desktops[j].h);
             desktops[j].master_size = (mode == 2) ? (desktops[j].h*msize)/100 : (desktops[j].w*msize)/100;
             desktops[j].nmaster = 0;
@@ -1336,7 +1336,7 @@ void setup() {
     showopen = clicktofocus = attachaside = 1;
     resizemovekey = Mod1Mask;
     windownamelength = 35;
-    show_bar = STATUS_BAR = 0;
+    show_bar = STATUS_BAR = barmon = 0;
 
     char *loc;
     loc = setlocale(LC_ALL, "");
